[package]
name = "libp2p-rpc"
version = "0.1.0"
authors = ["lerencao <funfriendcjf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures_codec = "0.4"
[dependencies.libp2p]
git = "https://github.com/libp2p/rust-libp2p.git"
default-features = false
[dependencies.futures]
version="0.3"
[dependencies.futures-timer]
version = "3.0"
[dependencies.thiserror]
version = "1.0"
[dependencies.anyhow]
version = "1.0"
[dependencies.log]
version = "0.4"
[dependencies.atomic_refcell]
version="0.1"
[dev-dependencies]
async-std = "1.0"
libp2p-mplex = { git = "https://github.com/libp2p/rust-libp2p.git" }
libp2p-secio = { git = "https://github.com/libp2p/rust-libp2p.git" }
libp2p-tcp = { git = "https://github.com/libp2p/rust-libp2p.git" }
env_logger = "0.7"